--- a/templates/mini/money.html
+++ b/templates/mini/money.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>abc-bank</title>
-        <link rel="stylesheet" href="{{STATIC_URLS}}style.css">
+        <link rel="stylesheet" href="{{STATIC_URLS}}css/style.css">
     </head>
     <body>
         <h1>
